--- a/electron/styles/main.css
+++ b/electron/styles/main.css
@@ -6,10 +6,9 @@
 .configuration-container {
   margin-left: 5%;
   margin-top: 3em;
-  background-color: #a2a8a3;
+  background-color: #7fa9b3;
   width: 350px;
   padding: 0.8em;
-  box-shadow: 5px 5px 5px #363836;
   display: inline-block;
 }
 
