--- a/electron/styles/main.css
+++ b/electron/styles/main.css
@@ -89,6 +89,6 @@
   border: 2px solid yellow;
 }
 .configuration-window {
-  background-image: url("../img/backgrounds/background_003_blue_sea_sky.jpg");
+  /* background-image: url("../img/backgrounds/background_003_blue_sea_sky.jpg"); */
   background-size: 100vw 100vh;
 }
