completed auto-refresh feature and modified some CSS

--- a/electron/styles/weather.css
+++ b/electron/styles/weather.css
@@ -161,6 +161,14 @@
 }
 
 .time-footer {
-  margin-bottom: 0px;
+  bottom: -93px;
+  position: relative;
   clear: both;
+  font-size: 12px;
+}
+
+.weather-forecast-auto-update {
+  position: absolute;
+  bottom: 0;
+  visibility: visible;
 }
