--- a/electron/styles/weather.css
+++ b/electron/styles/weather.css
@@ -130,6 +130,7 @@
   height: 100%;
   display: inline-block;
   padding-left: 0.2em;
+  padding-bottom: 0.1em;
 }
 
 .temperature-display {
@@ -137,6 +138,10 @@
   display: inline-block;
 }
 
+.temperature-display-feels-like {
+  font-size: 12px;
+  display: inline-block;
+}
 .forecast-cards-enclosure {
   padding-left: 1.5em;
   padding-top: 1.5em;
@@ -155,9 +160,10 @@
 .card-temperature {
   display: inline-block;
 }
+
 .card-icon {
-  width: 45px;
-  height: 50px;
+  width: 40px;
+  height: 40px;
   display: inline-block;
 }
 
@@ -172,4 +178,8 @@
   position: absolute;
   bottom: 0;
   visibility: visible;
+}
+
+.weather-card-weather-description-container {
+  display: inline-block;
 }
