--- a/electron/styles/weather.css
+++ b/electron/styles/weather.css
@@ -14,9 +14,11 @@
   margin-top: 0px;
   margin-right: 0.5em;
 }
+
 .options-settings-enclosure:hover {
   cursor: pointer;
 }
+
 .top-strip {
   width: 100%;
   height: 50%;
@@ -29,12 +31,13 @@
   text-shadow: 2px 2px 2px black;
   display: inline-block;
 }
+
 .separator {
   font-size: 20px;
   color: yellow;
   display: inline-block;
   text-shadow: 2px 2px 3px darkolivegreen;
-} 
+}
 
 .current-conditions-icon {
   width: 100px;
@@ -45,7 +48,7 @@
   margin-bottom: 2em;
   box-shadow: 2px 2px 3px black;
   color: white;
-  
+
 }
 
 .city-temp-enclosure {
@@ -74,12 +77,14 @@
 .enclosure {
   color: white;
 }
+
 .temperature-feels-like {
   display: inline-block;
   width: auto;
   height: auto;
   font-size: 15px;
 }
+
 .current-weather-conditions {
   width: auto;
   height: auto;
@@ -93,6 +98,7 @@
   display: block;
   font-size: 15px;
 }
+
 .other-stats-enclosure {
   width: 550px;
   height: 150px;
@@ -105,13 +111,20 @@
 .wind-main-enclosure {
   display: inline-block;
 }
+
 .bottom-strip {
   width: 100%;
   height: 50%;
   background-color: #2a2e33;
 }
 
-.wind-speed, .wind-gust, .wind_deg, .sun-sunrise, .sun-sunset, .atmospheric-pressure, .humidity {
+.wind-speed,
+.wind-gust,
+.wind_deg,
+.sun-sunrise,
+.sun-sunset,
+.atmospheric-pressure,
+.humidity {
   display: inline-block;
   font-size: 15px;
   margin-left: 0.1em;
@@ -119,6 +132,18 @@
 
 .current-forecast-background-image {
   /* background-image: url("../img/backgrounds/background_001_city.jpg"); */
+  background-size: 100vw 100vh;
+}
+
+.hourly-view-link {
+  color: wheat;
+  font-size: 14px;
+  display: inline-block;
+  margin-left: 1.5em;
+  margin-top: 0.5em;
+}
+
+.hourly-window {
   background-size: 100vw 100vh;
 }
 
@@ -138,6 +163,7 @@
   background-color: khaki;
   color: black;
 }
+
 .temperature-display {
   font-size: 20px;
   display: inline-block;
@@ -147,6 +173,7 @@
   font-size: 12px;
   display: inline-block;
 }
+
 .forecast-cards-enclosure {
   padding-left: 1.5em;
   padding-top: 1.5em;
@@ -162,6 +189,7 @@
 .weather-card-temperature-enclosure {
   display: inline-block;
 }
+
 .card-temperature {
   display: inline-block;
 }
