--- a/electron/styles/weather.css
+++ b/electron/styles/weather.css
@@ -234,6 +234,15 @@
   float: right;
 }
 
-.tr-class-row {
-  padding: 0.2em;
+.tr-class-row-dark {
+  background-color: #333;
+  color: white;
+  opacity: 90%;
+
+}
+
+.tr-class-row-light {
+  background-color: #345278;
+  color: white;
+  opacity: 90%;
 }
