--- a/electron/styles/weather.css
+++ b/electron/styles/weather.css
@@ -139,7 +139,7 @@
   color: wheat;
   font-size: 14px;
   display: inline-block;
-  margin-left: 1.5em;
+  margin-left: 1.1em;
   margin-top: 0.5em;
 }
 
@@ -245,4 +245,14 @@
   background-color: #345278;
   color: white;
   opacity: 90%;
+}
+
+.hourly-card-icon {
+  width: 40px;
+  height: 40px;
+}
+
+.hourly-list-table-master>tbody>tr>td {
+  padding: 0px;
+  border-top: none;
 }
