--- a/electron/styles/weather.css
+++ b/electron/styles/weather.css
@@ -176,7 +176,18 @@
 
 .forecast-cards-enclosure {
   padding-left: 1.1em;
+  padding-right: 1.1em;
   height: 82%;
+}
+
+.twelve-hour-section {
+  height: 100%;
+  width: 240px;
+}
+
+.daily-section {
+  height: 100%;
+  width: 620px;
 }
 
 .weather-card-weather-icon-container {
