--- a/electron/styles/weather.css
+++ b/electron/styles/weather.css
@@ -28,7 +28,7 @@
 
 .category {
   color: palevioletred;
-  text-shadow: 2px 2px 2px black;
+  text-shadow: 2px 2px 2px rgb(34, 34, 34);
   display: inline-block;
 }
 
@@ -36,7 +36,7 @@
   font-size: 20px;
   color: yellow;
   display: inline-block;
-  text-shadow: 2px 2px 3px darkolivegreen;
+  text-shadow: 2px 2px 2px rgb(34, 34, 34);
 }
 
 .current-conditions-icon {
@@ -156,6 +156,7 @@
   display: inline-block;
   padding-left: 0.2em;
   padding-bottom: 0.1em;
+  margin: 2px;
 }
 
 .weather-card:hover {
@@ -176,7 +177,7 @@
 
 .temperature-display-feels-like-daily {
   font-size: 10.5px;
-  display: inline-block;
+  display: block;
 }
 
 .morning-evening-night-enclosure {
@@ -184,7 +185,8 @@
 }
 
 .cat {
-  color: yellow;
+  color: palevioletred;
+  text-shadow: black;
   font-weight: bold;
 }
 
@@ -196,16 +198,20 @@
   padding-left: 1.1em;
   padding-right: 1.1em;
   height: 82%;
+  display: table;
 }
 
 .twelve-hour-section {
   height: 100%;
   width: 240px;
+  display: inline-block;
 }
 
 .daily-section {
   height: 100%;
-  width: 620px;
+  width: auto;
+  display: inline-block;
+  margin-left: 15%;
 }
 
 .weather-card-weather-icon-container {
@@ -228,10 +234,24 @@
 }
 
 .time-footer {
-  bottom: -60px;
   position: relative;
   clear: both;
   font-size: 12px;
+}
+
+.time-footer-enclosure {
+  position: fixed;
+  bottom: 14%;
+}
+
+.five-day-header {
+  color: wheat;
+  font-size: 14px;
+  display: inline-block;
+  margin-left: 1.1em;
+  margin-top: 0.5em;
+  left: 398px;
+  position: fixed;
 }
 
 .weather-forecast-auto-update {
@@ -276,6 +296,15 @@
   opacity: 90%;
 }
 
+.shadow-text {
+  text-shadow: 1px 1px 1px rgb(37, 37, 37);
+}
+
+.card-shadow {
+  box-shadow: 2px 2px 2px rgb(37, 37, 37);
+}
+
+
 .hourly-card-icon {
   width: 40px;
   height: 40px;
@@ -289,4 +318,9 @@
 
 .hourly-feels-like {
   font-size: 12px;
+}
+
+.daily-forecast-cards-enclosure {
+  height: 82%;
+  display: table;
 }
