--- a/electron/styles/main.css
+++ b/electron/styles/main.css
@@ -4,6 +4,12 @@
   background-color: whitesmoke;
 }
 
+
+.card-title {
+  margin-top: -10px;
+  margin-bottom: -4px;
+}
+
 .configuration-container {
   margin-left: 5%;
   margin-top: 3em;
@@ -46,7 +52,12 @@
 }
 
 .card-search-enclosure {
-  padding: 1em;
+  background-color: #7fa9b3;
+  margin-top: 9px;
+}
+
+.card-body {
+  background-color: #7fa9b3;
 }
 
 .city-search-button {
@@ -65,7 +76,7 @@
 .city-results-container {
   margin-top: 0.5em;
   padding: 0.4em;
-  height: 150px;
+  height: 103px;
   overflow: auto;
 }
 
