--- a/electron/styles/weather.css
+++ b/electron/styles/weather.css
@@ -368,7 +368,7 @@ li {
   background-color: white;
   color: black;
   list-style: none;
-  opacity: 70%;
+  opacity: 90%;
 }
 
 
@@ -376,7 +376,7 @@ li {
   font-weight: bold;
   text-decoration: underline;
   color: orange;
-  animation: glow 0.2s ease-in-out infinite alternate;
+  animation: glow 1.2s ease-in-out infinite alternate;
 }
 
 @keyframes glow {
@@ -385,6 +385,6 @@ li {
   }
 
   to {
-    text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
+    text-shadow: 0 0 20px #fff, 0 0 30px red, 0 0 40px red, 0 0 50px red, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px black;
   }
 }
