--- a/electron/styles/weather.css
+++ b/electron/styles/weather.css
@@ -65,6 +65,7 @@
   font-size: 30px;
   text-shadow: 2px 2px #2a2e33;
   background-color: #595b66;
+  text-align: center;
 }
 
 .temperature-actual {
