--- a/electron/styles/weather.css
+++ b/electron/styles/weather.css
@@ -389,3 +389,7 @@ li {
     text-shadow: 0 0 20px #fff, 0 0 30px red, 0 0 40px red, 0 0 50px red, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px black;
   }
 }
+
+.error-message {
+  visibility: hidden;
+}
